# 50_rust_projects

./: Cargo.toml
api_call/: Cargo.toml
api_call/src/: main.rs
async_get/: Cargo.toml
async_get/src/: main.rs
auth_simple/: Cargo.toml
auth_simple/src/: main.rs
get_request/: Cargo.toml
get_request/src/: main.rs
postgres_connect/: Cargo.toml
postgres_connect/src/: main.rs
read_csv/: README.md
read_csv/src/: main.rs
read_json/: Cargo.toml
read_json/src/: main.rs
web_api_actix_and_rhai/: Cargo.toml
web_api_actix_and_rhai/src/: main.rs
write_json/: Cargo.toml
write_json/src/: main.rs
